--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cesium Versuche</title>
-    <script src="app.js"></script>
+    <script src="/app.js"></script>
   </head>
   <body>
     <div id="demo">Hier könnte alles stehen</div>
