added altitude + accuray

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@ function getLocation() {
 
 function showPosition(position) {
   x.innerHTML = "Latitude: " + position.coords.latitude + 
-  "<br>Longitude: " + position.coords.longitude;
+  "<br>Longitude: " + position.coords.longitude + 
+  "<br>Accuracy:" + position.coords.accuracy +
+  "<br>Height:" + position.coords.altitude + 
+  "<br>Accuray" + position.coords.altitudeAccuracy;
 }
 </script>
 
