--- a/index.html
+++ b/index.html
@@ -1,32 +1,64 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>HTML Geolocation</h1>
-<p>Click the button to get your coordinates.</p>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+      crossorigin=""
+    />
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script
+      src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+      crossorigin=""
+    ></script>
+  </head>
+  <body>
+    <h1>HTML Geolocation</h1>
+    <p>Click the button to get your coordinates.</p>
 
-<button onclick="getLocation()">Try It</button>
+    <button onclick="getLocation()">Try It</button>
 
-<p id="demo"></p>
+    <p id="demo"></p>
 
-<script>
-const x = document.getElementById("demo");
+    <div style="height: 500px" id="map"></div>
 
-function getLocation() {
-  if (navigator.geolocation) {
-    navigator.geolocation.getCurrentPosition(showPosition);
-  } else { 
-    x.innerHTML = "Geolocation is not supported by this browser.";
-  }
-}
+    <script>
+      /*       Hier ist die getGeolocation App */
 
-function showPosition(position) {
-  x.innerHTML = "Latitude: " + position.coords.latitude + 
-  "<br>Longitude: " + position.coords.longitude + 
-  "<br>Accuracy:" + position.coords.accuracy +
-  "<br>Height:" + position.coords.altitude + 
-  "<br>Accuray" + position.coords.altitudeAccuracy;
-}
-</script>
+      const x = document.getElementById("demo");
 
-</body>
+      function getLocation() {
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(showPosition);
+        } else {
+          x.innerHTML = "Geolocation is not supported by this browser.";
+        }
+      }
+
+      function showPosition(position) {
+        x.innerHTML =
+          "Latitude: " +
+          position.coords.latitude +
+          "<br>Longitude: " +
+          position.coords.longitude +
+          "<br>Accuracy:" +
+          position.coords.accuracy +
+          "<br>Height:" +
+          position.coords.altitude +
+          "<br>Accuray" +
+          position.coords.altitudeAccuracy;
+
+        /*      Hier ist die Leaflet Map */
+        var map = L.map("map").setView([position.coords.latitude, position.coords.longitude], 15);
+
+        L.tileLayer("https://tile.openstreetmap.org/{z}/{x}/{y}.png", {
+          maxZoom: 19,
+          attribution:
+            '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
+        }).addTo(map);
+      }
+    </script>
+  </body>
 </html>
