--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       function getLocation() {
         if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(showPosition);
+          navigator.geolocation.watchPosition(showPosition);
         } else {
           x.innerHTML = "Geolocation is not supported by this browser.";
         }
